deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  selector:
    matchLabels:
      app: java-kubernetes
  replicas: 2 
  template:
    metadata:
      labels:
        app: java-kubernetes
    spec:
      containers:
      - name: java-kubernetes
        image: europe-west1-docker.pkg.dev/peak-axiom-426310-b1/jenkins-image-repo/my-app2 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
