service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-kubernetesssvc
spec:
  selector:
    app: java-kubernetes
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
